--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-       <a href="{{ site.pdf_url }}" class="btn">{{ site.pdf_text }}</a>
+      {% for link in site.links %}
+        <a href="{{ link.url }}" class="btn">{{ link.text }}</a>
+      {% endfor %}
     </header>
 
     <main id="content" class="main-content" role="main">
